--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>歌のクイズ</title>
+    <title>この歌を知っていますか？</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1 id="title">歌のクイズ</h1>
+    <h1 id="title">この歌を知っていますか？</h1>
 
 
     <!--QUIZ CONTAINER-->
@@ -40,7 +40,7 @@
 
     <div id="score-music">
         <img src="" alt="">
-        <h2 id="score-title">この歌に興味</h2>
+        <h2 id="score-title">あなたの正解は</h2>
         <h2 id="score-content"></h2>
         <h2 id="score"></h2>
         <button type="button" id="score-btn" onclick="backToQuiz()">Back to Quiz</button>
